labs/meshtraffic-routing/reviews-path-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - "*"
  gateways:
  - reviews-gateway
  http:
  - match:
    - uri:
        prefix: /api/v3/reviews
    rewrite:
      uri: /reviews
    route:
    - destination:
        host: reviews
        subset: v3
  - match:
    - uri:
        prefix: /api/v2/reviews
    rewrite:
      uri: /reviews
    route:
    - destination:
        host: reviews
        subset: v2
  - match:
    - uri:
        prefix: /reviews
    route:
    - destination:
        host: reviews
        subset: v1
